[project]
name = "pycubeview"
version = "1.0.0"
description = "A Flexible and Interactive Spectral (and more!) Image Viewer for Python"
authors = [
    {name = "Z.M. Vig",email = "zvig@umd.edu"}
]
license = "LICENSE"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyside6 (>=6.6.0,<7.0.0)",
    "pyqtgraph (>=0.14.0,<0.15.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "alphashape (>=1.3.1,<2.0.0)",
    "types-shapely (>=2.1.0.20250917,<3.0.0.0)",
    "arguably (>=1.3.0,<2.0.0)",
    "cmap (>=0.6.2,<0.7.0)",
    "pyside6-stubs (>=6.7.3.0,<7.0.0.0)",
    "spectralio (>=0.1.9,<0.2.0)",
    "reflspeckit (>=0.2.2,<0.3.0)",
]

[project.scripts]
cubeview = "pycubeview.app:main"
cubeview_dev = "pycubeview.app_dev:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"